/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.alibaba.fluss.protogen.tests;

enum E1 {
  A1 = 1;
  B1 = 2;
  C1 = 5;
}

enum E2 {
  A2 = 1;
  B2 = 2;
  C2 = 5;
  D2 = 6;
}

message EnumTest1 {
  required E1 e = 1;
}

message EnumTest2 {
  required E2 e = 1;
}

message EnumTest1Optional {
  optional E1 e = 1;
}

message EnumTest1Repeated {
  repeated E1 e = 1;
}

message EnumTest2Repeated {
  repeated E2 e = 1;
}

message EnumTest1Packed {
  repeated E1 e = 1 [packed = true];
}

message EnumTest2Packed {
  repeated E2 e = 1 [packed = true];
}
